--- a/app/views/matches/map.html.erb
+++ b/app/views/matches/map.html.erb
@@ -20,13 +20,13 @@
       <button id="agreement" class="btn">今すぐ会う</button>
     </div>
   </div>
-  
 
   <div id="appointment" style="display: none">
-    <h2 id="station"></h2>
-    <h2 id="distance-to-station"></h2>
-    <h2 id="meeting-time"></h2>
-    <p id="partner-info"></p>
-    <button id="unmatch">マッチ解除</button>
+    <div class="appointment__container">
+      <h1>Matched!</h1>
+      <h1 id="station"></h1>
+      <p id="distance-to-station"></p>
+      <h2 id="meeting-time"></h2>
+    </div>
   </div>
 </div>
