--- a/app/views/matches/_logged_in.html.erb
+++ b/app/views/matches/_logged_in.html.erb
@@ -1,8 +1,9 @@
 <%= form_with model: current_user, id: "whole-form" do |f| %>
 <div class="matchesNew__image">
-  <img id="image-preview"> 
+  <img id="image-preview">
+  <%= image_tag 'add-photo.png', class: "image__icon add__icon" %>
   <%= f.file_field :image, capture: 'user' %>
-  <%= f.label :image, "a",  id: 'camera' %>
+  <%= f.label :image, image_tag("photo-camera.png", alt: "camera", class: "image__icon camera__icon"),  id: 'camera' %>
 </div>
   <%= f.text_area :comment, placeholder: "ひとことを追加..." %>
 <% end %>
