--- a/app/views/password_resets/edit.html.erb
+++ b/app/views/password_resets/edit.html.erb
@@ -16,7 +16,7 @@
       <%= f.password_field :password_confirmation, placeholder: "もう一度入力してください" %>
     </div>
  
-    <div class="general_field"> 
+    <div class="general_field submit__field"> 
       <%= f.submit "パスワードを更新", class: "btn" %>
     </end>
   <% end %>
