--- a/app/views/password_resets/new.html.erb
+++ b/app/views/password_resets/new.html.erb
@@ -6,7 +6,7 @@
     <%= f.label :email, "登録しているメールアドレス" %>
     <%= f.email_field :email, placeholder: "例: porco92@example.com" %>
   </div>
-  <div class="general_field">
+  <div class="general_field submit__field">
     <%= f.submit "リンクを送る", class: "btn" %>
   </div>
   <% end %>
