--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,11 +11,16 @@
   <%= f.email_field :email %>
 </div>
 
-<div class="general_field">
+<div class="general_field submit__field">
   <%= f.submit "更新", class: "btn" %>
 </div>
 <% end %>
 
-<%= link_to "アカウントを削除する", @user, data: { "turbo-method": :delete,
+<div class="general_field">
+  <%= link_to "ログアウト", logout_path, data: { "turbo-method": :delete }, class: "usersShow__logout" %>
+</div>
+<div class="general_field usersShow__delete">
+  <%= link_to "アカウントを削除する", @user, data: { "turbo-method": :delete,
                                                    turbo_confirm: "本当に削除しますか？" } %>
+</div>
 </div>
