--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -5,22 +5,13 @@
 
 <div class="footer__container">
   <% if logged_in? %>
-    <div class="menu-left">
-      <nav class="nav">
-        <ul class="nav-menu">
-          <li>
-            <%= link_to "プロフィール", current_user %>
-          </li>
-          <li>
-            <%= link_to "ログアウト", logout_path,
-                                      data: { "turbo-method": :delete } %>
-          </li>
-        </ul>
-      </nav>
-  
+  <div class="menu-left">
+    <%= link_to image_tag("profile-user.png", alt: "プロフィール", class: "image__icon profile__icon"), current_user %>
   </div>
   <div class="menu-center">
-    <button id="connect-link" class="btn">オン</button>
+    <%= link_to entry_path, id: "connect-link", class: "btn" do %>
+      <div id="connect-text">オン</div>
+    <% end %>
   </div>
   <% end %>
 
