--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -139,6 +139,15 @@ footer {
   bottom: 16px;
 }
 
+#warning {
+  background-color: white;
+  opacity: 0.7;
+  color: black;
+  border-radius: 12px;
+  width: 80%;
+  margin: 0 auto;
+}
+
 
 /* input fields */
 
@@ -179,8 +188,8 @@ footer {
 }
 
 .spinner {
-  width: 56px;
-  height: 56px;
+  width: 40px;
+  height: 40px;
   border: 4px solid var(--background-color);
   border-top-color: var(--second-color);
   border-radius: 50%;
@@ -209,6 +218,10 @@ footer {
   border-radius: 5%;
 }
 
+#match-info {
+  z-index: 11;
+}
+
 .match-info__container {
   position: relative;
   width: 100%;
@@ -228,7 +241,7 @@ footer {
   right: 5%;
   bottom: 5%;
   max-width: 40%;
-  font-size: 8px;
+  font-size: 16px;
 }
 
 #map__closeButton {
@@ -272,6 +285,13 @@ footer {
 .matchesNew__information {
   text-align: left;
   padding-bottom: 24px;
+}
+
+#partner-detail {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 10000;
 }
 
 .matchesNew__information h2 {
