Make javascript independent

--- a/app/views/matches/_logged_in.html.erb
+++ b/app/views/matches/_logged_in.html.erb
@@ -1,3 +1,5 @@
+<% provide(:independent, javascript_import_module_tag("independents/match")) %>
+
 <%= form_with model: current_user, id: "whole-form" do |f| %>
 <div class="matchesNew__image">
   <img id="image-preview">
