--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -391,3 +391,13 @@ label[for=user_comment] {
 .usersShow__delete {
   margin-top: 24px;
 }
+
+/* account_activations */
+#copyButton {
+  background-color: white;
+  border-radius: 32px;
+  width: 80%;
+  height: 64px;
+  font-size: 16px;
+  font-weight: bold;
+}
