--- a/app/views/matches/map.html.erb
+++ b/app/views/matches/map.html.erb
@@ -31,6 +31,7 @@
     </div>
   </div>
 
-  <div id="current-location">
-  </div>
+  <div id="sound" class="sound"></div>
+  <div id="current-location"></div>
+  <%= audio_tag 'muber_notification.m4a' %>
 </div>
