Complete notification of matching

--- a/app/views/matches/map.html.erb
+++ b/app/views/matches/map.html.erb
@@ -33,5 +33,5 @@
 
   <div id="sound" class="sound"></div>
   <div id="current-location"></div>
-  <%= audio_tag 'muber_notification.m4a' %>
+  <%= audio_tag 'muber_notification_1.m4a', loop: "true" %>
 </div>
