--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -33,14 +33,29 @@ header p, ul, div{
   padding: 0;
 }
 
-
-
 .body__container {
   background-color: var(--background-color);
   width: 100%;
   max-width: 512px;
   height: 100svh;
   margin: 0 auto;
+}
+
+.loading__wrapper {
+  position: absolute;
+  z-index: 10000;
+  width: 100%;
+  height: 100%;
+  background-color: var(--background-color);
+  opacity: 0.3;
+}
+
+#loading-screen3 {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 10001;
 }
 
 .main__container {
@@ -76,6 +91,7 @@ textarea {
   background-color: black;
   height: 64px;
   border-radius: 0 0 32px 32px;
+  width: 95vw;
 }
 
 input[type=submit] {
