--- a/app/views/matches/map.html.erb
+++ b/app/views/matches/map.html.erb
@@ -34,4 +34,6 @@
   <div id="sound" class="sound"></div>
   <div id="current-location"></div>
   <%= audio_tag 'muber_notification_1.m4a', loop: "true" %>
+
+  <div id="bot-creater">近くにbotを作成</div>
 </div>
