Restrict to yokohama area

--- a/app/views/matches/_logged_in.html.erb
+++ b/app/views/matches/_logged_in.html.erb
@@ -1,4 +1,6 @@
+<% provide(:title, "エントリー") %>
 <% provide(:independent, javascript_import_module_tag("independents/match")) %>
+
 <%= hidden_field_tag "current_user_id", @current_user.id %>
 
 <%= form_with model: @current_user, id: "whole-form" do |f| %>
