--- a/app/views/matches/_not_logged_in.html.erb
+++ b/app/views/matches/_not_logged_in.html.erb
@@ -1,22 +1,20 @@
+<% provide(:title, "あまりにリアルな出会い") %>
 <div class="main__container">
-  <h2>出会いを、もっと自然に、もっとカジュアルに。</h2>
+  <h2>あまりにリアルな出会い。</h2>
 
   <div class="matchesNew__information">
+    
     <div>
-      <h2>Realtime</h2>
-      マッチが成立したら、今すぐに会いましょう。
+      <h5>リアルタイムマッチング</h5>
     </div>
     <div>
-      <h2>Fast Meeting</h2>
-      距離の近い人からマッチされます。
+      <h5>プロフィールもチャットもなし</h5>
     </div>
     <div>
-      <h2>No Profile, No Chat</h2>
-      自己紹介は直接向かい合って。
+      <h5>横浜駅限定</h5>
     </div>
     <div>
-      <h2>100% Free</h2>
-      女性も男性も、完全無料。
+      <h5>完全無料</h5>
     </div>
   </div>
 
