--- a/app/views/matches/map.html.erb
+++ b/app/views/matches/map.html.erb
@@ -2,6 +2,7 @@
   <div id="map"></div>
   <%= image_tag current_user.image.variant(:icon), class: "icon" %> 
   <div id="loading-screen">
+    <div id="ack-yokohama"></div>
     <div class="spinner"></div>
   </div>
 
