--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -16,6 +16,6 @@
   <% end %>
 
   <div class="menu-right">
-  <%= link_to "Muber", root_url, id: "logo", data: { turbo: false } %>
+    <%= link_to "Potara", root_url, id: "logo", data: { turbo: false } %>
   </div>
 </div>
