--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -132,7 +132,7 @@ footer {
 
 
 #logo {
-  position: fixed;
+  position: absolute;
   right: 16px;
   bottom: 16px;
   z-index: 1000;
@@ -244,7 +244,7 @@ audio {
 
 /* loading */
 #loading-screen {
-  position: fixed;
+  position: absolute;
   top: 10%;
   left: 50%;
   transform: translateX(-50%);
@@ -252,9 +252,17 @@ audio {
   pointer-events: none;
 }
 
+#ack-yokohama {
+  opacity: 0.5;
+  border-radius: 12px;
+  padding: 16px 24px;
+  font-size: 24px
+}
+
 .spinner {
   width: 40px;
   height: 40px;
+  margin: 32px auto;
   border: 4px solid var(--background-color);
   border-top-color: var(--second-color);
   border-radius: 50%;
