--- a/app/views/matches/map.html.erb
+++ b/app/views/matches/map.html.erb
@@ -9,10 +9,11 @@
   <div id="match-info" style="display: none;">
     <div class="match-info__container">
       <div class="main-info">
-        <h2>
-          <span id="name"></span>
-          <span id="age"></span>
-        </h2> 
+        <div>
+          <span id="name" class="important-info"></span>
+          <span id="age" class="important-info"></span>
+          <p id="height"></p>
+        </div> 
         <p id="distance"></p>
       </div>
       <p id="comment"></p>
