--- a/app/views/matches/map.html.erb
+++ b/app/views/matches/map.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, "通信中です..") %>
 <div id="map-page">
   <div id="map"></div>
   <%= image_tag current_user.image.variant(:icon), class: "icon" %> 
