--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,7 +1,10 @@
-<p id="warning" style="display: none;">
-  画面から離れるとマッチは解除されます<br>
-  お互いの位置情報は更新されません
-</p>
+<div id="warning" style="display: none;">
+  <h4>通信中です..</h4>
+  <p>
+    どちらかが画面から離れると<br>
+    マッチは自動解除されます
+  <p>
+</div>
 
 <div class="footer__container">
   <% if logged_in? %>
