--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, "プロフィール") %>
 <div class="main__container">
 <%= form_with(model: @user) do |f| %>
 <%= render 'shared/error_messages' %>
