--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -41,13 +41,14 @@ header p, ul, div{
   margin: 0 auto;
 }
 
-.loading__wrapper {
+#loading__wrapper {
   position: absolute;
   z-index: 10000;
-  width: 100%;
-  height: 100%;
+  width: 100svw;
+  height: 100svh;
   background-color: var(--background-color);
-  opacity: 0.3;
+  opacity: 0.7;
+  pointer-events: auto;
 }
 
 #loading-screen3 {
@@ -94,7 +95,7 @@ textarea {
   text-align: left;
   background-color: black;
   height: 64px;
-  border-radius: 0 0 32px 32px;
+  border-radius: 0 0 16px 16px;
   width: 100%;
   box-sizing: border-box;
 }
@@ -133,7 +134,6 @@ footer {
 .menu-left, .menu-center, .menu-right {
   width: 33%;
 }
-
 
 #logo {
   position: absolute;
@@ -187,6 +187,160 @@ footer {
 
 .submit__field {
   margin-top: 64px;
+}
+
+/* not logged in  */
+
+.matchesNew__information {
+  text-align: left;
+  padding-bottom: 24px;
+}
+
+#partner-detail {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 10000;
+}
+
+.matchesNew__information h2 {
+  margin: 16px 0px 8px 0px;
+}
+
+.login_link {
+  color: var(--text-color);
+  font-size: 14px;
+}
+
+/* signup */
+.usersNew__form {
+  padding-top: 32px;
+}
+
+.usersNew__field {
+  margin-bottom: 16px;
+}
+
+.gender input[type=radio] {
+  display: none;
+}
+
+.gender label {
+  display: inline-block;
+  padding: 8px 30px;
+  margin: 0 8px;
+  border: 1px solid white;
+  border-radius: 12px;
+  background-color: var(--background-color);
+  color: black;
+  opacity: 1.0;
+}
+
+.gender input[type=radio]:checked + label[for=user_girl_1] {
+  background-color: rgb(186, 1, 97);  
+}
+
+.gender input[type=radio]:checked + label[for=user_girl_0] {
+  background-color: rgb(0, 45, 191);  
+}
+
+
+/* profile */
+.usersShow__delete {
+  margin-top: 24px;
+}
+
+
+/* account_activations */
+#copyButton {
+  background-color: white;
+  border-radius: 32px;
+  width: 80%;
+  height: 64px;
+  font-size: 16px;
+  font-weight: bold;
+}
+
+
+/* logged in */
+
+label[for=user_comment] {
+  display: block;
+}
+
+.matchesNew__image {
+  position: relative;
+}
+
+#image-preview {
+  display: block;
+  max-width: 100%;
+  max-height: 80%;
+}
+
+#image-preview:not([src]) {
+  background-color: var(--first-color); 
+  width: 100%;
+  aspect-ratio: 4 / 5;
+}
+
+.add__icon {
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 10;
+}
+
+#user_image {
+  display: none;
+}
+
+#camera {
+  position: absolute;
+  right: 16px;
+  bottom: 16px;
+  background-color: black;
+  opacity: 0.5;
+  width: 17%;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  z-index: 100;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#permission {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 10001;
+  width: 60%;
+  color: var(--background-color);
+  background-color: var(--beige-color);
+  border-radius: 16px;
+  padding: 16px;
+}
+
+.permission-btn {
+  display: flex;
+}
+
+#deny-btn, #permit-btn {
+  height: 30%;
+  margin: 6px;
+  font-size: 16px;
+}
+
+#deny-btn {
+  width: 25%;
+  background-image: none;
+}
+
+#permit-btn {
+  width: 65%;
 }
 
 /* map */
@@ -244,12 +398,13 @@ audio {
   border-radius: 50%;
   border: 5px solid var(--second-color);
 }
-
+/*
 #bot-creater {
   position: absolute;
   z-index: 1;
   background-color: var(--first-color);
 }
+*/
 
 /* loading */
 #loading-screen {
@@ -262,7 +417,7 @@ audio {
 }
 
 #ack-yokohama {
-  opacity: 0.5;
+  opacity: 0.7;
   border-radius: 12px;
   padding: 16px;
   font-size: 16px;
@@ -285,6 +440,7 @@ audio {
   }
 }
 
+
 /* match info */
 
 #match-info, #appointment {
@@ -298,6 +454,11 @@ audio {
   background-size: cover;
   border-radius: 5%;
 }
+/*
+.blend-area {
+  mix-blend-mode: exclusion;
+}
+*/
 
 #match-info {
   z-index: 11;
@@ -412,126 +573,4 @@ audio {
   border-left: 8px solid transparent;
   border-right: 8px solid transparent;
   border-top: 8px solid #d44300;
-}
-
-/* not logged in  */
-
-.matchesNew__information {
-  text-align: left;
-  padding-bottom: 24px;
-}
-
-#partner-detail {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  z-index: 10000;
-}
-
-.matchesNew__information h2 {
-  margin: 16px 0px 8px 0px;
-}
-
-.login_link {
-  color: var(--text-color);
-  font-size: 14px;
-}
-
-/* signup */
-.usersNew__form {
-  padding-top: 32px;
-}
-
-.usersNew__field {
-  margin-bottom: 16px;
-}
-
-
-
-.gender input[type=radio] {
-  display: none;
-}
-
-.gender label {
-  display: inline-block;
-  padding: 8px 30px;
-  margin: 0 8px;
-  border: 1px solid white;
-  border-radius: 12px;
-  background-color: var(--background-color);
-  color: black;
-  opacity: 1.0;
-}
-
-
-.gender input[type=radio]:checked + label[for=user_girl_1] {
-  background-color: rgb(186, 1, 97);  
-}
-
-.gender input[type=radio]:checked + label[for=user_girl_0] {
-  background-color: rgb(0, 45, 191);  
-}
-
-/* logged in */
-
-label[for=user_comment] {
-  display: block;
-}
-
-.matchesNew__image {
-  position: relative;
-}
-
-#image-preview {
-  display: block;
-  max-width: 100%;
-  max-height: 80%;
-}
-
-#image-preview:not([src]) {
-  background-color: var(--first-color); 
-  width: 100%;
-  aspect-ratio: 4 / 5;
-}
-
-.add__icon {
-  position: absolute;
-  top: 40%;
-  left: 50%;
-  transform: translateX(-50%);
-  z-index: 10;
-}
-
-#user_image {
-  display: none;
-}
-
-#camera {
-  position: absolute;
-  right: 16px;
-  bottom: 16px;
-  background-color: black;
-  opacity: 0.5;
-  width: 17%;
-  aspect-ratio: 1;
-  border-radius: 50%;
-  z-index: 10000;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-/* profile */
-.usersShow__delete {
-  margin-top: 24px;
-}
-
-/* account_activations */
-#copyButton {
-  background-color: white;
-  border-radius: 32px;
-  width: 80%;
-  height: 64px;
-  font-size: 16px;
-  font-weight: bold;
 }
