--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -13,7 +13,7 @@
   </div>
   <div class="menu-center">
     <%= link_to entry_path, id: "connect-link", class: "btn", data: { turbo: false } do %>
-      <div id="connect-text">オン</div>
+      <%= image_tag 'no-background.png', class: "potara-btn" %>
     <% end %>
   </div>
   <% end %>
