Test resize by client side

--- a/app/views/matches/map.html.erb
+++ b/app/views/matches/map.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title, "通信中です..") %>
 <div id="map-page">
   <div id="map"></div>
-  <%= image_tag current_user.image.variant(:icon), class: "icon" %> 
+  <%= image_tag current_user.image, class: "icon" %> 
   <div id="loading-screen">
     <div id="ack-yokohama"></div>
     <div class="spinner"></div>
