--- a/app/views/matches/_logged_in.html.erb
+++ b/app/views/matches/_logged_in.html.erb
@@ -20,7 +20,7 @@
   <img id="image-preview">
   <%= image_tag 'add-photo.png', class: "image__icon add__icon" %>
   <%= f.file_field :image, capture: 'user' %>
-  <%= f.label :image, image_tag("photo-camera.png", alt: "camera", class: "image__icon camera__icon"),  id: 'camera' %>
+  <%= f.label :image, image_tag("camera2.png", alt: "camera", class: "image__icon camera__icon"),  id: 'camera' %>
 </div>
   <%= f.text_area :comment, placeholder: "ひとことを追加..." %>
 <% end %>
