--- a/app/views/matches/_not_logged_in.html.erb
+++ b/app/views/matches/_not_logged_in.html.erb
@@ -1,10 +1,10 @@
-<% provide(:title, "あまりにリアルな出会い") %>
+<% provide(:title, "超リアル派マッチングアプリ") %>
 <div class="initial__viewport">
   <div class="main__container">
-    <h2>指先の恋から、さようなら</h2>
+    <h3>指先の恋からさようなら</h3>
+    <h5>超リアル派マッチングアプリ 「Potara」</h5>
 
     <div class="matchesNew__information">
-      
       <div>
         <h5>横浜駅限定</h5>
       </div>
