--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,8 +1,7 @@
 <div id="warning" style="display: none;">
   <h4>通信中です..</h4>
   <p>
-    どちらかが画面から離れると<br>
-    マッチは自動解除されます
+    なるべく画面から離れないでください
   <p>
 </div>
 
