--- a/app/views/user_mailer/account_activation.html.erb
+++ b/app/views/user_mailer/account_activation.html.erb
@@ -1,9 +1,9 @@
-<h1>Muber</h1>
+<h1>Potara</h1>
 
 <p><%= @user.name %>さん<p>
 
 <p>
-  Muberへようこそ！　下記のURLをタップしてアカウントを認証しましょう。
+  ご登録ありがとうございます！　下記のURLをタップしてアカウントを認証しましょう。
 </p>
 
 <%= link_to "認証してアカウントを有効にする", edit_account_activation_url(@user.activation_token,
