--- a/app/views/user_mailer/account_activation.text.erb
+++ b/app/views/user_mailer/account_activation.text.erb
@@ -1,5 +1,5 @@
 <%= @user.name %>さん
 
-Muberへようこそ！　下記のURLをタップしてアカウントを認証しましょう。
+Potaraへのご登録ありがとうございます！　下記のURLをタップしてアカウントを認証しましょう。
 
 <%= edit_account_activation_url(@user.activation_token, email: @user.email) %>
