--- a/app/views/matches/new.html.erb
+++ b/app/views/matches/new.html.erb
@@ -1,5 +1,6 @@
 <% if logged_in? %>
-  <%= render 'before_release' %>
+
+  <%= render 'logged_in' %>
 <% else %>
   <%= render 'not_logged_in' %>
 <% end %>
