--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -217,7 +217,7 @@ footer {
 /* not logged in  */
 
 .initial__viewport {
-  height: 100%;
+  height: 100svh;
   width: 100%;
   background-image: url('map.png');
   background-size: cover;
@@ -243,6 +243,49 @@ footer {
   color: var(--text-color);
   font-size: 14px;
 }
+
+.app__discription {
+  background-color: var(--beige-color);
+  color: var(--background-color);
+  padding: 32px;
+}
+
+.app__discription p {
+  margin: 24px auto;
+}
+
+.actual__display {
+  width: 30%;
+}
+
+
+.discription__image {
+ width: 100%;
+}
+
+.application__image {
+  width: 80%;
+}
+
+.smartphones {
+  margin: 0 auto;
+}
+
+.actual__display {
+  width: 40%;
+  aspect-ratio: 4 / 7;
+  position: cover;
+  border-radius: 24px;
+  border: 8px solid;
+  margin: 4px;
+}
+
+.canva__dream {
+  border-radius: 24px;
+}
+
+
+
 
 /* signup */
 .usersNew__form {
